# Single-Agentic-AI

./: .env  .gitignore
inventory_mgmt_agent/: credentials.json  pyproject.toml
inventory_mgmt_agent/src/inventory_mgmt_agent/: __main__.py
inventory_mgmt_agent/src/inventory_mgmt_agent/agents/: __init__.py  inventoryagent.py
inventory_mgmt_agent/src/inventory_mgmt_agent/config/: __init__.py  settings.py
inventory_mgmt_agent/src/inventory_mgmt_agent/database/: __init__.py  connection.py  datapopulator.py
inventory_mgmt_agent/src/inventory_mgmt_agent/tools/: __init__.py  db_tools.py  gmail_tools.py
