[project]
name = "inventory-mgmt-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "techjourneysimplified",email = "techjourneysimplified@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain-openai (>=0.3.6,<0.4.0)",
    "langchain-community (>=0.3.17,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-api-python-client (>=2.161.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "inventory_mgmt_agent", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
